--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,21 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <aside class="sidepanel">
+        <div class="sidepanel__text">Социальные сети</div>
+        <div class="sidepanel__divider"></div>
+        <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        
+    </aside>
     <section class="promo">
         <div class="container">
             <h3 class="promo__subheader title title_fz16">Меня зовут Александра Смит</h3>
             <h1 class="promo__header title">Я web-разработчик из города Москва</h1>
-            <div class="promo__buttons">
-                <div class="promo__link">Портфолио</div>
-                <div class="promo__link btn">Про меня</div>
+            <div class="promo__btns title title_fz14">
+                <a href="#" class="promo__link btn">Портфолио</a>
+                <a href="#" class="promo__link">Про меня</a>
             </div>
         </div>
     </section>
